[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Telecopter"
version = "1.0.0"
description = "Telecopter media request manager"
authors = ["Rasool Fatemi <rmfatemi@gmail.com>"]
readme = "README.md"

packages = [
    { include = "telecopter" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "^1.1.0"
dotenv = "^0.9.9"
aiosqlite = "^0.21.0"
aiogram = "^3.20.0.post0"
aiohttp = ">=3.11.18,<3.12.6"

[tool.poetry.scripts]
telecopter = "telecopter.bot:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pre-commit = "^4.2.0"
deptry = "^0.23.0"

[tool.black]
target-version = ["py311"]
preview = true
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
include = [
    "telecopter/**/*.py",
    "*.py"
]
